--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "js-cookie": "^3.0.5",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "primeicons": "^6.0.1",
